# python-simple-ioc

./: .flake8  .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.md  README.txt  makefile  pyproject.toml  requirements.txt  requirements_python2.txt  requirements_python3.txt  setup.cfg  setup.py  tests.py  version.py
.github/: README.md  dependabot.yml  workflows-badges.md
.github/workflows/: ci.yml  docs.yml  release.yml  test-extras.yml  test-matrix.yml  tests.yml
docs/: bootstraping.rst  conf.py  event_dispatcher.rst  extension.rst  extra.rst  index.rst  install.rst  locator.rst  references.rst  tag.rst
docs/extra/: event-dispatcher.rst  flask.rst  mailer.rst  redis-py.rst  redis-wrap.rst  twisted.rst
docs/references/: bootstraping.rst  extension.rst  tag.rst
ioc/: __init__.py  component.py  event.py  exceptions.py  helper.py  loader.py  locator.py  misc.py  proxy.py
ioc/extra/: __init__.py
ioc/extra/command/: __init__.py  command.py  di.py
ioc/extra/command/resources/config/: command.yml
ioc/extra/event/: di.py
ioc/extra/flask/: __init__.py  command.py  di.py
ioc/extra/flask/resources/config/: flask.yml
ioc/extra/jinja2/: di.py  helper.py
ioc/extra/jinja2/resources/config/: jinja.yml
ioc/extra/locator/: __init__.py  di.py
ioc/extra/mailer/: di.py
ioc/extra/redis/: __init__.py  di.py
ioc/extra/redis/resources/config/: redis.yml
ioc/extra/redis_wrap/: di.py
ioc/extra/stats/: di.py  views.py
ioc/extra/stats/resources/config/: stats.yml
ioc/extra/stats/resources/templates/: index.html  parameters.html  services.html
ioc/extra/tornado/: __init__.py  command.py  di.py  handler.py  router.py
ioc/extra/tornado/resources/config/: services.yml
ioc/extra/twisted/: __init__.py  di.py
ioc/extra/twisted/resources/config/: twisted.yml
tests/fixtures/: order_list.yml  services.yml
tests/ioc/: component.py  event.py  helper.py  loader.py  locator.py  proxy.py  service.py  test_component.py  test_event.py  test_helper.py  test_loader.py  test_locator.py  test_misc.py  test_proxy.py
tests/ioc/extra/jinja/: test_helper.py
tests/ioc/extra/tornado/: __init__.py  test_handler.py  test_router.py
tests/ioc_test/: service.py  test_component.py  test_event.py  test_helper.py  test_loader.py  test_locator.py  test_misc.py  test_proxy.py
tests/ioc_test/extra/jinja/: test_helper.py
